# Tiling

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md
example_glfw_glm/: CMakeLists.txt  README.md  glad.c  main.cpp
example_glfw_glm/glad/: glad.h
minimal_example_glfw/: CMakeLists.txt  main.cpp
release/: main
src/: color.cpp  color.h  config.h.in  edge.cpp  edge.h  main.cpp  polygon.cpp  polygon.h  program.cpp  program.h  tilingApp.cpp  tilingApp.h  utils.cpp  utils.h
